--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,14 +2,31 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.plants{
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
 img {
   width: 100px;
   height: 100px;
+  margin: auto;
+  display: block;
+}
+
+.text {
+  display: flex;
+  max-width: 200px;
+  text-align: center;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
