--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,12 +2,14 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+/* new div container for plant info items */
 .plants{
   display: flex;
   justify-content: center;
   gap: 52px;
 }
 
+/* added auto margins and block display format */
 img {
   width: 100px;
   height: 100px;
@@ -15,17 +17,18 @@ img {
   display: block;
 }
 
+/* flex display on text plus center alignment and max width */
 .text {
   display: flex;
   max-width: 200px;
   text-align: center;
 }
 
+/* added text-align and margin-bottom */
 .title {
   font-size: 36px;
   font-weight: 900;
-  display: flex;
-  justify-content: center;
+  text-align: center;
   margin-bottom: 32px;
 }
 
