--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,80 @@
+/* body is now a flex container arranged with columns */
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
+/* added flex, font styling, and padding to header */
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 0 16px;
 }
 
+/* added flex alignment */
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+/* new div flex container for middle page content incl. sidebar and cards */
+.content {
+  display: flex;
+  flex: 1;
+}
+
+/* added padding and flex-shrink = 0 so sidebar doesn't squish */
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding: 16px;
 }
 
+/* created a flex container for the cards and added flex wrap for text content */
+.card-container {
+  padding: 48px;
+  gap: 24px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* added padding and width to cards */
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 12px;
+  width: 300px;
+}
+
+/* removed list bullets and set padding+margin to 0 */
+/* added flex properties in order to add gap amount */
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+/* removed link underlines and changed link color and font size*/
+a {
+  text-decoration: none;
+  color: #eee;
+  font-size: 24px;
 }
